--- a/FLORES.html
+++ b/FLORES.html
@@ -19,10 +19,10 @@
           color: white;
       }
       .texto p {
-          font-size: 30px; /* Cambia el tamaño de las letras a 20px */
+          font-size: 10px; /* Cambia el tamaño de las letras a 20px */
       }
       .texto h1 {
-          font-size: 40px; /* Cambia el tamaño de las letras a 30px */
+          font-size: 20px; /* Cambia el tamaño de las letras a 30px */
       }
       .audio {
             position: absolute;
@@ -35,7 +35,7 @@
 <body class="container">
   
     <div class="texto">
-     <h1>¡Aqui las Flores para las mas Bandida de Piñas jeje!</h1>
+     <h1>¡Aqui las Flores para las mas Bandida Jejeje!</h1>
      <p> Aunque no parezca si te tengo aprecio sapa, Te amo amiguita.</p>
      <div class="audio">
       <audio controls autoplay>
