--- a/FLORES.html
+++ b/FLORES.html
@@ -40,6 +40,8 @@
      <div class="audio">
       <audio controls autoplay>
           <source src="img\Floricienta.mp3" type="audio/mpeg">
+          <source src="img\Floricienta.m4a" type="audio/mp4a">
+           
           Tu navegador no soporta el elemento de audio.
       </audio>
   </div>
