--- a/FLORES.html
+++ b/FLORES.html
@@ -41,7 +41,8 @@
       <audio controls autoplay>
           <source src="img\Floricienta.mp3" type="audio/mpeg">
           <source src="img\Floricienta.m4a" type="audio/mp4a">
-           
+          <source src="img\Floricienta.wav" type="audio/wav">
+          <source src="img\Floricienta.ogg" type="audio/ogg">
           Tu navegador no soporta el elemento de audio.
       </audio>
   </div>
