--- a/FLORES.html
+++ b/FLORES.html
@@ -35,7 +35,7 @@
 <body class="container">
   
     <div class="texto">
-     <h1>¡Aqui las Flores para las mi panita!</h1>
+     <h1>¡Aqui las Flores para mi panita!</h1>
      <p> Aunque no parezca si te tengo aprecio sapa, Te amo Sapita.</p>
    <div class="audio">
    <audio id="myAudio" controls>
