--- a/FLORES.html
+++ b/FLORES.html
@@ -29,6 +29,27 @@
             top: -9999px;
             left: -9999px;
         }
+      /* Estilos adicionales */
+      body {
+          margin: 0;
+          background-color: #f0e68c;
+          font-family: Arial, sans-serif;
+      }
+
+      /* Añadimos un emoji animado 🐘 que se mueve por la pantalla */
+      .elephant {
+          position: absolute;
+          font-size: 50px;
+          animation: moveElephant 5s infinite alternate;
+      }
+
+      @keyframes moveElephant {
+          0% { top: 10%; left: 10%; }
+          25% { top: 10%; left: 80%; }
+          50% { top: 80%; left: 80%; }
+          75% { top: 80%; left: 10%; }
+          100% { top: 50%; left: 50%; }
+      }
   </style>
 </head>
 
@@ -45,7 +66,7 @@
 </div>
 
 <button id="playAudio">Reproducir</button>
-
+<div class="elephant">🐘</div>
 <script>
    // Función para intentar reproducir audio
    function playAudio() {
